hphp/hack/test/typecheck/inout/bad_inout_use_arg8.php.exp
File "bad_inout_use_arg8.php", line 11, characters 5-15:
You cannot decorate this argument as inout (Parsing[1002])
